# DevBrain

./: .cursorignore  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.cursor/agents/: learn.md
.cursor/rules/: backend.mdc  frontend.mdc
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1ccb5d09d39_initial_tables.py
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: __init__.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  collections.py  documents.py
backend/app/core/: __init__.py  database.py
backend/app/models/: __init__.py  document.py
backend/app/schemas/: __init__.py  document.py
backend/app/services/: __init__.py  collection_service.py  document_service.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py
backend/tests/verification/: __init__.py  test_phase0_check.py  test_phase1_check.py
docs/: ARCHITECTURE.md  LEARNING_GUIDE.md  PROGRESS.md  implementation_plan.md
docs/phases/: phase-0-setup.md  phase-1-backend.md  phase-2-frontend.md
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/components/: theme-provider.tsx  theme-toggle.tsx
frontend/components/layout/: app-sidebar.tsx
frontend/hooks/: use-mobile.ts
frontend/scripts/: verify-phase2.js
scripts/: init-db.sql
